--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -18,3 +18,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+button {
+  font-family: inherit;
+  font-size: 16px;
+  height: 43px;
+  border-radius: 21.5px;
+  border: 1pt solid rgba(255, 255, 255, 0);
+  padding: 0 20px 0 20px;
+  background: unset;
+  cursor: pointer;
+}
